--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,6 @@
   "main": "server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "repository": {
     "type": "git",
@@ -24,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/SohaibKhaliq/JWT_Bio_Auth/issues"
   },
-  "homepage": "https://github.com/SohaibKhaliq/JWT_Bio_Auth#readme"
+  "homepage": "https://github.com/SohaibKhaliq/JWT_Bio_Auth#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
