--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,9 @@
   },
   "homepage": "https://github.com/SohaibKhaliq/JWT_Bio_Auth#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3"
   }
 }
