created simple express server and revelead simple environment variables

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "A face-recognition based authentication system!!",
   "main": "server/app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
